@@ -5,6 +5,8 @@ import ru.tinkoff.edu.java.linkparser.linkStructures.StackOverflowResult;
 import ru.tinkoff.edu.java.linkparser.parsers.LinkParser;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -14,10 +16,10 @@ public class LinkParserTest {
     @Test
     void parseGithubLink(){
         Result expected = new GitHubResult("sanyarnd", "tinkoff-java-course-2022");
-        URL link;
+        URI link;
         try {
-            link = new URL("https://github.com/sanyarnd/tinkoff-java-course-2022/");
-        } catch (MalformedURLException e) {
+            link = new URI("https://github.com/sanyarnd/tinkoff-java-course-2022/");
+        } catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
         assertEquals(expected, LinkParser.getLinkInfo(link));
@@ -25,11 +27,11 @@ public class LinkParserTest {
 
     @Test
     void parseValidStackOverflowLink(){
-        Result expected = new StackOverflowResult(1642028);
-        URL link;
+        Result expected = new StackOverflowResult(1642028L);
+        URI link;
         try {
-            link = new URL("https://stackoverflow.com/questions/1642028/what-is-the-operator-in-c");
-        } catch (MalformedURLException e) {
+            link = new URI("https://stackoverflow.com/questions/1642028/what-is-the-operator-in-c");
+        } catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
         assertEquals(expected, LinkParser.getLinkInfo(link));
@@ -38,10 +40,10 @@ public class LinkParserTest {
     @Test
     void parseInvalidLink(){
         Result expected = null;
-        URL link;
+        URI link;
         try {
-            link = new URL("https://justtest/haveagooday/hopeitworks");
-        } catch (MalformedURLException e) {
+            link = new URI("https://justtest/haveagooday/hopeitworks");
+        } catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
         assertEquals(expected, LinkParser.getLinkInfo(link));
@@ -50,10 +52,10 @@ public class LinkParserTest {
     @Test
     void parseInvalidStackOverflowLink(){
         Result expected = null;
-        URL link;
+        URI link;
         try {
-            link = new URL("https://stackoverflow.com/search?q=unsupported%20link");
-        } catch (MalformedURLException e) {
+            link = new URI("https://stackoverflow.com/search?q=unsupported%20link");
+        } catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
         assertEquals(expected, LinkParser.getLinkInfo(link));
